    - Finally gave science its own tab! because god knows im not slowing down on unique science items and recipes.
    - Added Expiremental research data (technectium science), which is a special science pack that unlocks bonuses or things related to science.
    - Finally added the first PM-endorsed infinite technologies, which is science pack recipe productivity!

  Changes:
    - Slightly nerfed research productivity.
    - Changed barium nitrate to use nitric acid.
    - Moved naptha steam cracking into A-ATM.
    - Rerendered and slightly remodelled heating/cooling plating.

---------------------------------------------------------------------------------------------------
Version: 0.6.509
Date: 2025-22-07
  The never play TFG and mod factorio at the same time, heed my warning Update:

  Additions:
    - Added a russian translation, thanks to AncientElis on the discord server!

  Changes:
    - Updated and expanded PM milestones compatibility.

  Fixes:
    - Fixed milestone compatibility.
    - Fixed steam > water recipe being the wrong ratio.
    - Fixed locale for shotgun slug bonuses.

---------------------------------------------------------------------------------------------------
Version: 0.6.508
Date: 2025-21-07
  The AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH x2 Update:

  Additions:
    - Added a recipe for turning steam back into water.

  Fixes:
    - Fixed stack inserter mod compatibility.
    - Fixed locale issues with vehicle fuel category.

---------------------------------------------------------------------------------------------------
Version: 0.6.507
Date: 2025-20-07
  The AHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH Update:

  Fixes:
    - Fixed zinc/nickel ore patches not appearing on versions made before 0.6.500.

---------------------------------------------------------------------------------------------------
Version: 0.6.506
Date: 2025-16-07
  The i hope you guys enjoy a new science type in 0.7! Update:

  Changes: