@@ -1340,6 +1340,7 @@ pm-sulfuric-waste-seperation=Sulfuric waste water seperation
 pm-sulfuric-waste-looping=Sulufirc waste water looping
 pm-garnet-seawater-desaltination=Garnet seawater desalination
 pm-sodium-sodium-hydroxide=Sodium sodium hydroxide
+pm-kasethal-heating-plating=Kasethal Heat-resistant plating 
 
 pm-liquid-brass=Molten brass alloying
 pm-liquid-steel=Molten steel alloying
@@ -1362,7 +1363,7 @@ pm-indium-plate-cooling=Indium plate cooling
 pm-cadnium-plate-cooling=Cadmium plate cooling
 pm-cobalt-plate-cooling=Cobalt plate cooling
 pm-glass-cooling=Glass plate cooling
-pm-liquid-stainless-steel=Molten Stainless steel alloying
+pm-liquid-stainless-steel=Molten stainless steel alloying
 pm-liquid-kasethal=Kasethal alloying
 pm-brass-plate-cooling=Brass plate cooling
 pm-kasethal-plate-cooling=Kasethal plate cooling
