@@ -17,6 +17,7 @@ Date: 2025-12-07
     - Finally gave science its own tab! because god knows im not slowing down on unique science items and recipes.
     - Added Expiremental research data (technectium science), which is a special science pack that unlocks bonuses or things related to science.
     - Finally added the first PM-endorsed infinite technologies, which is science pack recipe productivity!
+    - Added new recipes for Mulitmetal items.
 
   Changes:
     - Slightly nerfed research productivity.
